--- a/blog.html
+++ b/blog.html
@@ -64,8 +64,9 @@
         <li><a class="nav-link scrollto" href="#hero">홈</a></li>
         <li><a class="nav-link scrollto" href="#services">서비스소개</a></li>
         <li><a class="nav-link scrollto" href="#clients">서비스특징</a></li>
-        <li><a class="nav-link scrollto " href="#testimonials">자주하는질문</a></li>
-        <li><a class="nav-link scrollto active"  href="blog.html">블로그</a></li>
+        <li><a class="nav-link scrollto" href="#system">상품모니터링시스템</a></li>
+        <li><a class="nav-link scrollto" href="#testimonials">FAQ</a></li>
+        <li><a class="nav-link scrollto active" href="blog.html">블로그</a></li>
         <li><a class="nav-link scrollto" href="#contact">연락하기</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
