--- a/index.html
+++ b/index.html
@@ -5,12 +5,19 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>온라인프라이스트래커</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>온라인프라이스트래커 - 온라인마켓 가격모니터링</title>
+  <meta name="description" content="온라인프라이스트래커는 국내외 쇼핑몰 가격 모니터링 서비스입니다. 여러분이 생산하시거나 판매하시는 상품의  온라인 가격을 모니터링 하여 덤핑으로 판매하는 것을 방지하세요. 여러분의 상품 가치를 온라인프라이스트래커를 통해 지키세요. 최소광고가격(MAP), Minimun Advertised Price">
+  <meta name="keywords" content="쇼핑몰 가격 모니터링, 온라인마켓 가격 모니터링, 온라인 상품 가격조사최소광고가격, MAP,, Minimum Advertised Price, 가격모니터링 프로그램, 경쟁업체 가격 모니터링, 가격 모니터링 솔루션, 가격 모니터링 툴">
+  <meta name=author content="온라인프라이스트래커" />
+  <link rel="canonical" href="https://onlinepricetracker.kr">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="온라인마켓 가격 모니터링 - 온라인프라이스트래커">
+  <meta property="og:keywords" content="쇼핑몰 가격 모니터링, 온라인마켓 가격 모니터링, 온라인 상품 가격조사최소광고가격, MAP,, Minimum Advertised Price, 가격모니터링 프로그램, 경쟁업체 가격 모니터링, 가격 모니터링 솔루션, 가격 모니터링 툴">
+  <meta property="og:description" content="온라인프라이스트래커는 국내외 쇼핑몰 가격 모니터링 서비스입니다. 여러분이 생산하시거나 판매하시는 상품의  온라인 가격을 모니터링 하여 덤핑으로 판매하는 것을 방지하세요. 여러분의 상품 가치를 온라인프라이스트래커를 통해 지키세요. 최소광고가격(MAP), Minimun Advertised Price">
+  <meta property="og:url" content="https://onlinepricetracker.kr">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/favicon.ico" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -71,7 +78,8 @@
           <li><a class="nav-link scrollto active" href="#hero">홈</a></li>
           <li><a class="nav-link scrollto" href="#services">서비스소개</a></li>
           <li><a class="nav-link scrollto" href="#clients">서비스특징</a></li>
-          <li><a class="nav-link scrollto " href="#testimonials">자주하는질문</a></li>
+          <li><a class="nav-link scrollto" href="#system">상품모니터링시스템</a></li>
+          <li><a class="nav-link scrollto" href="#testimonials">FAQ</a></li>
           <li><a class="nav-link scrollto" href="blog.html">블로그</a></li>
           <li><a class="nav-link scrollto" href="#contact">연락하기</a></li>
         </ul>
@@ -93,6 +101,7 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/1.jpg');"></div>
         <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/2.jpg');"></div>
+        <div class="swiper-slide" style="background-image: url('assets/img/hero-carousel/3.jpg');"></div>
       </div>
     </div>
 
@@ -142,7 +151,7 @@
               <div class="icon"><i class="bi bi-graph-up"></i></div>
               <h4 class="title"><a href="">직관적인 데시보드</a></h4>
               <p class="description">다양한 그래프와 요약으로 직관적으로
-                파악할 수 있는 데시보드 지원합니다.</p>
+                파악할 수 있는 데시보드를 포함한 상품모니터링시스템으로 서비스 합니다.</p>
             </div>
           </div>
 
@@ -227,6 +236,27 @@
       </div>
     </section><!-- End Clients Section -->
 
+    <section id="system">
+      <div class="container" data-aos="fade-up">
+        <div class="section-header">
+          <h2>상품모니터링시스템</h2>
+          <p>온라인프라이스트래커에서 제공하는 상품모니터링 시스템은 고객이 보다 쉽게 상품 모니터링을 확인하기 위해 어디서나 접근 할 수 있는 웹시스템으로 만들었습니다. 웹페이지를 통해 쉽게 모니터링 데시보드,
+          모니터링 대상 상품, 일별 모니터링 결과등 다양한 항목으로 확인할 수 있고 결과를 엑셀파일로 다운로드 받을 수 있습니다.</p>
+        </div>
+        <div class="clients-slider swiper" data-aos="fade-up" data-aos-delay="0">
+          <div class="swiper-wrapper align-items-center">
+            <div class="swiper-slide"><img src="assets/img/clients/system-1.jpg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/system-2.jpg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/system-3.jpg" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/system-4.jpg" class="img-fluid" alt=""></div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+
+      </div>
+    </section>
+
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials">
       <div class="container" data-aos="fade-up">
@@ -241,6 +271,14 @@
             모니터링 대상 쇼핑몰은 어떤 사이트도 가능한가요? 외국의 쇼핑몰도 가능한가요?
           </p>
           <h3><i class="bi bi-arrow-right-square-fill"></i>&nbsp;네 어떤 쇼핑몰도 가능합니다. 단 외국의 쇼핑몰의 경우에는 모니터링 하기 위한 준비시간이 추가적으로 필요할 수도 있습니다. </h3>
+        </div>
+
+        <div class="testimonial-item">
+          <p>
+            <i class="bi bi-question-square-fill"></i>&nbsp;
+            상품모니터링 시스템은 무료로 사용할 수 있나요?
+          </p>
+          <h3><i class="bi bi-arrow-right-square-fill"></i>&nbsp;네 온라인프라이스트래커 서비스를 이용하는 고객님이시라면 누구나 이용하실 수 있습니다.  </h3>
         </div>
 
         <div class="testimonial-item">
@@ -277,6 +315,7 @@
       </div>
     </section><!-- End Testimonials Section -->
 
+    </section>
     <!-- ======= Contact Section ======= -->
     <section id="contact">
       <div class="container" data-aos="fade-up">
