--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta property="og:keywords" content="쇼핑몰 가격 모니터링, 온라인마켓 가격 모니터링, 온라인 상품 가격조사최소광고가격, MAP,, Minimum Advertised Price, 가격모니터링 프로그램, 경쟁업체 가격 모니터링, 가격 모니터링 솔루션, 가격 모니터링 툴">
   <meta property="og:description" content="온라인프라이스트래커는 국내외 쇼핑몰 가격 모니터링 서비스입니다. 여러분이 생산하시거나 판매하시는 상품의  온라인 가격을 모니터링 하여 덤핑으로 판매하는 것을 방지하세요. 여러분의 상품 가치를 온라인프라이스트래커를 통해 지키세요. 최소광고가격(MAP), Minimun Advertised Price">
   <meta property="og:url" content="https://onlinepricetracker.kr">
-
+  <meta name="naver-site-verification" content="3b5308572ad5243d04d5bb2c42f63d9afeab114b" />
   <!-- Favicons -->
   <link href="assets/img/favicon.ico" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
