--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3GL7BX2MT"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-Y3GL7BX2MT');
+  </script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -33,7 +42,14 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <script>
+    // SDK를 초기화 합니다. 사용할 앱의 JavaScript 키를 설정해 주세요.
+    Kakao.init('31d4530626ce9cb01cc54f9d7590ed7a');
 
+    // SDK 초기화 여부를 판단합니다.
+    console.log(Kakao.isInitialized());
+  </script>
   <!-- =======================================================
   * Template Name: Reveal
   * Updated: Sep 18 2023 with Bootstrap v5.3.2
@@ -88,7 +104,14 @@
 
     </div>
   </header><!-- End Header -->
-
+  <!-- kakaotalk  start -->
+  <div class="kakaotalk-chat" id="create-channel-chat-button"></div>
+  <script type="text/javascript">
+    Kakao.Channel.createChatButton({
+      container: '#create-channel-chat-button',
+      channelPublicId: '_svCMK',
+    })
+  </script>
   <!-- ======= hero Section ======= -->
   <section id="hero">
 
