--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </div>
 
             <div class="col-lg-6 about-img">
-              <img src="assets/img/dashboard.jpg" alt="">
+              <img src="assets/img/최저광고가격-모니터링데시보드.jpg" alt="">
             </div>
 
           </div>
