--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="box">
               <div class="icon"><i class="bi bi-alarm"></i></div>
               <h4 class="title"><a href="">규칙위반 시 다양한 알림</a></h4>
-              <p class="description">최저가격 위반이나 가격 변동이 일어
+              <p class="description">최소가격 위반이나 가격 변동이 일어
                 났을 때 이메일, 문자, 카카오 톡으로 알려주고 모바일로 바로 확인 가능합니다.</p>
             </div>
           </div>
@@ -220,7 +220,7 @@
             </div>
 
             <div class="col-lg-6 about-img">
-              <img src="assets/img/최저광고가격-모니터링데시보드.jpg" alt="">
+              <img src="assets/img/최소광고가격-모니터링데시보드.jpg" alt="">
             </div>
 
           </div>
