--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Google tag (gtag.js) -->
+  <!--
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y3GL7BX2MT"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -11,6 +12,7 @@
 
     gtag('config', 'G-Y3GL7BX2MT');
   </script>
+  -->
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -220,7 +222,7 @@
             </div>
 
             <div class="col-lg-6 about-img">
-              <img src="assets/img/최소광고가격-모니터링데시보드.jpg" alt="">
+              <img src="assets/img/최저광고가격-모니터링데시보드.jpg" alt="">
             </div>
 
           </div>
